--- a/frontend-statics/m.35xs.co/templates/chapter.ejs
+++ b/frontend-statics/m.35xs.co/templates/chapter.ejs
@@ -1,5 +1,5 @@
 <%- include('common/top', {}); %>
-<link rel="stylesheet" href="/static/src/css/common.css" />
+<link rel="stylesheet" href="/static/src/css/reset.css" />
 <link rel="stylesheet" href="/static/src/css/read.css" />
 <%- include('common/pageHeader', {}); %>
 <%- include('common/readSetter', {}); %>
@@ -51,6 +51,8 @@
     <p> 灵舟在云霄上乘风破浪而去，林白凝望前方，看见前方云海之内冒出一片山岳，仿若这些山岳本就是伫立于云端之上。</p>
     <p> 各大山头上，修建着恍如神仙宫楼，有着数不清的武者在其内来回穿梭。</p>
     <p> 霞光万丈，仙神齐聚，豁然一片鼎盛宗门的气象。</p>
+    <p> ()</p>
+    <p></p>
     <!-- <p style="width:100%;text-alight:center;"><a href="javascript:BookMark(440509, 116903824);" style="text-align:center;color:red;">『加入书签，方便阅读』</a></p> -->
 </div>
 <%- include('common/readPager', {}); %>
