--- a/frontend-statics/m.35xs.co/templates/common/footer.ejs
+++ b/frontend-statics/m.35xs.co/templates/common/footer.ejs
@@ -1,7 +1,7 @@
 <div class="clearfix"></div>
 <%- include('./searchForm', {}); %>
 <footer>
-    <a href="#top" class="backTop">
+    <a href="#top">
         <img src="//files.35xs.co/m/images/icon-backtop.gif" title="↑" alt="↑" />
     </a>
     <p class="version channel">
