--- a/frontend-statics/m.35xs.co/templates/common/searchForm.ejs
+++ b/frontend-statics/m.35xs.co/templates/common/searchForm.ejs
@@ -1,5 +1,5 @@
 <form class="searchForm" method="get" action="/book/search">
-    <input type="text" name="keyword" class="searchForm_input" value="输入书名•作者" />
+    <input type="text" name="keyword" class="searchForm_input searchForm_input2" value="输入书名•作者" />
     <input type="hidden" name="t" value="1" />
     <input type="submit" class="searchForm_btn" value="搜索" />
 </form>
