--- a/readFrontend/templates/book.ejs
+++ b/readFrontend/templates/book.ejs
@@ -1,48 +1,27 @@
 <%- include('common/top', {}); %>
-<link rel="stylesheet" href="/static/src/css/reset.css" />
+<link rel="stylesheet" href="/static/src/css/common.css" />
 <link rel="stylesheet" href="/static/src/css/bookinfo.css" />
 <%- include('common/pageHeader', {}); %>
-<p class="synopsisAd" style="color: red;"></p>
 <div class="synopsisArea">
     <div class="synopsisArea_detail">
-        <div id="bookdetail">
-            <div id="thumb"> <img src="/data/bookimg/404406.jpg" onerror="this.src='//files.35xs.co/m/images/noimg.jpg'" alt="皇叔宠妃悠着点" /></div>
-            <div id="book_info">
-                <div style="width: 100%">
-                    <ul id="book_detail">
-                        <li class="author">作者：竹九乐</li>
-                        <li class="sort">类别：<a href="/cate/8/">都市言情</a></li>
-                        <li class="">状态：连载</li>
-                        <li class="">更新：2020-06-03</li>
-                    </ul>
-                    <div id="book_score">
-                        <div class="score">
-                            <div class="score_content" id="score_content">
-                                <div class="score_loading"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div style="width: 100%">
-                    <div id="user_score">评分：</div>
-                    <ul class="starlist" id="starlist">
-                        <li i="1"><a href="javascript:void(0);" title="1星" class="star_one">1</a></li>
-                        <li i="2"><a href="javascript:void(0);" title="2星" class="star_two">2</a></li>
-                        <li i="3"><a href="javascript:void(0);" title="3星" class="star_three">3</a></li>
-                        <li i="4"><a href="javascript:void(0);" title="4星" class="star_four">4</a></li>
-                        <li i="5"><a href="javascript:void(0);" title="5星" class="star_five">5</a></li>
-                    </ul>
-                </div>
+        <div class="hot_sale">
+            <div class="bookimg">
+                <img class="lazy" data-original="https://www.35xs.co/data/noimg.jpg" src="//files.35xs.co/m/images/defaultimg.png">
+            </div>
+            <div class="bookinfo">
+                <p class="author">作者：过tt万</p>
+                <p class="author">类别：武侠仙侠</p>
+                <p class="author">状态：连载</p>
+                <p class="author">更新：2020-06-12 06:00:00</p>
             </div>
         </div>
     </div>
-    <p class="btn"> <a href="/book/404406/mulu/">开始阅读</a><a href="javascript:BookMark(404406,0);" class="btn_toBookShelf">加入书架</a><a href="/user/" class="btn_toMyBook">我的书架</a></p>
-    <p>
-        <script>
-        info();
-        </script>
+    <p class="btn">
+        <a href="/book/404406/mulu/">开始阅读</a>
+        <a href="javascript:BookMark(404406,0);" class="btn_toBookShelf">加入书架</a>
+        <a href="/user/" class="btn_toMyBook">我的书架</a>
     </p>
-    <p class="review"> </p>
+    <p class="review">简介：遇到一个只会嘤嘤嘤的蠢萌戏精系统怎么办？在线等……挺急的！系统不仅绑定错了人，还让自己穿越成了死人！不过……这个死人挺强的！勉强可以接受吧！陈翔很无奈的从秽土转生的棺材里面走出来！“那么，从此刻开始，我是千手柱间！”——关键词：【火影】【木叶】【爽文】【无女主】【无敌流】这是天风的第三本火影同人，品质保证。</p>
 </div>
 <div class="recommend">
     <h2><a>最新章节 &nbsp;&nbsp;&nbsp;&nbsp;更新：2020-6-3 22:28:08</a></h2>
@@ -61,7 +40,4 @@
     <h2><a href="/book/404406/mulu/">查看完整目录</a></h2>
 </div>
 <%- include('common/footer', {}); %>
-<script>
-cambrian.render('tail')
-</script>
 <%- include('common/bottom', {}); %>
