--- a/readFrontend/templates/common/readSetter.ejs
+++ b/readFrontend/templates/common/readSetter.ejs
@@ -1,8 +1,12 @@
-<p class="Readpage" style="background:#FFFFFF;padding:2px;">
-    <a id="lightdiv" class="button lightoff" onclick="nr_setbg('light')">关灯</a>
-    <a id="huyandiv" class="button huyanon" onclick="nr_setbg('huyan')">护眼</a>
-    &nbsp;&nbsp;&nbsp;&nbsp; 字体：
-    <a id="fontbig" class="sizebg" onclick="nr_setbg('big')">大</a>
-    <a id="fontmiddle" class="sizebg" onclick="nr_setbg('middle')">中</a>
-    <a id="fontsmall" class="sizebg" onclick="nr_setbg('small')">小</a>
-</p>
+<div class="Readsetter">
+    <div class="box">
+        <button id="lightDefault" class="lightbg on">默认</button>
+        <button id="lightHuyan" class="lightbg">护眼</button>
+        <button id="lightYejian" class="lightbg">夜间</button>
+    </div>
+    <div class="box">
+        <button id="fontBig" class="sizebg on">大</button>
+        <button id="fontMiddle" class="sizebg">中</button>
+        <button id="fontSmall" class="sizebg">小</button>
+    </div>
+</div>
