--- a/readFrontend/templates/history.ejs
+++ b/readFrontend/templates/history.ejs
@@ -1,39 +1,30 @@
 <%- include('common/top', {}); %>
-<link rel="stylesheet" type="text/css" href="/static/src/css/reset.css" />
-<link rel="stylesheet" type="text/css" href="/static/src/css/rank.css" />
+<link rel="stylesheet" type="text/css" href="/static/src/css/common.css" />
 <%- include('common/pageHeader', {}); %>
-<div class="tabArea list rankingList rankingList_3">
-    <div class="slide-con slide-con2">
-        <div id="UserTempBook" class="slide-item list1">
-            <div class="hot_sale"> <span class="num num1">1</span> <a href="/book/288866/">
-                    <p class="title">一剑独尊</p>
-                    <p class="author">作者：</p>
-                </a>
-                <p class="author">最近更新：<a style="color: Red;" href="/book/288866/116838562.html" target="_blank">剑中仙 第一千三百三十七章：震惊的叶知命！</a></p>
-                <p class="author">上次阅读：<a bookid="288866" href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
-                <p class="author"> <a href="javascript:delcase(288866)">
-                        <font color="#ff0000">从书架删除</font>
-                    </a></p>
+<div class="historyArea">
+    <div class="historyItem">
+        <span class="num">1</span>
+        <div class="info">
+            <div class="title">
+                <a href="/book/288866/">一剑独尊</a>
             </div>
-            <div class="hot_sale"> <span class="num num1">2</span> <a href="/book/257019/">
-                    <p class="title">三寸人间</p>
-                    <p class="author">作者：</p>
-                </a>
-                <p class="author">最近更新：<a style="color: Red;" href="/book/257019/116885492.html" target="_blank">第964章 也是星辰！</a></p>
-                <p class="author">上次阅读：<a bookid="257019" href="/book/257019/116690976.html" target="_blank">第960章 祭天之礼!</a></p>
-                <p class="author"> <a href="javascript:delcase(257019)">
-                        <font color="#ff0000">从书架删除</font>
-                    </a></p>
+            <div class="otherInfo">
+                <p>作者：xxx | 分类：科幻灵异</p>
+                <p>上次阅读：<a class="lastReaded" href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
+                <p>最近更新：<a href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
             </div>
-            <div class="hot_sale"> <span class="num num1">3</span> <a href="/book/404406/">
-                    <p class="title">皇叔宠妃悠着点</p>
-                    <p class="author">作者：</p>
-                </a>
-                <p class="author">最近更新：<a style="color: Red;" href="/book/404406/116902346.html" target="_blank">第1443章 连死都不怕的人，还会怕什么…</a></p>
-                <p class="author">上次阅读：<a bookid="404406" href="/book/404406/116902345.html" target="_blank">第1442章 你做了什么！</a></p>
-                <p class="author"> <a href="javascript:delcase(404406)">
-                        <font color="#ff0000">从书架删除</font>
-                    </a></p>
+        </div>
+    </div>
+    <div class="historyItem">
+        <span class="num">2</span>
+        <div class="info">
+            <div class="title">
+                <a href="/book/288866/">一剑独尊</a>
+            </div>
+            <div class="otherInfo">
+                <p>作者：xxx | 分类：科幻灵异</p>
+                <p>上次阅读：<a class="lastReaded" href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
+                <p>最近更新：<a href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
             </div>
         </div>
     </div>
