--- a/readFrontend/templates/category.ejs
+++ b/readFrontend/templates/category.ejs
@@ -34,7 +34,7 @@
             <p class="review">简介：遇到一个只会嘤嘤嘤的蠢萌戏精系统怎么办？在线等……挺急的！系统不仅绑定错了人，还让自己穿越成了死人！不过……这个死人挺强的！勉强可以接受吧！陈翔很无奈的从秽土转生的棺材里面走出来！“那么，从此刻开始，我是千手柱间！”——关键词：【火影】【木叶】【爽文】【无女主】【无敌流】这是天风的第三本火影同人，品质保证。</p>
         </div>
     </a>
-    <p class="page" data-invalidpageerrmsg="页索引无效" data-outrangeerrmsg="页索引超出范围" data-pagecount="22040" data-pageparameter="page" data-pagerid="Webdiyer.MvcPager" data-urlformat="/Book/List?page=__page__">首页上页<a href="/Book/List?page=2">下页</a><a href="/Book/List?page=22040">尾页</a></p>
+    <%- include('common/listPager', {}); %>
 </div>
 <%- include('common/footer', {}); %>
 <script type="text/javascript" language="javascript">
