--- a/readFrontend/templates/login.ejs
+++ b/readFrontend/templates/login.ejs
@@ -1,20 +1,23 @@
 <%- include('common/top', {}); %>
-<link rel="stylesheet" type="text/css" href="/static/src/css/reset.css" />
+<link rel="stylesheet" type="text/css" href="/static/src/css/common.css" />
 <link rel="stylesheet" type="text/css" href="/static/src/css/login.css" />
 <%- include('common/pageHeader', {}); %>
 <div class="login_box">
     <form name="form_login" method="post">
-        <div class="login_name"> <span class="person_bg"></span> <input type="text" class="name login_nm" name="username" value="用户名"></div>
-        <p class="tips_text">请输入用户名</p>
-        <div class="login_name"> <span class="psw_bg"></span> <input type="text" class="name login_psw" name="password" value="你的账号密码"></div>
-        <p class="tips_text">请输入密码</p>
-        <div class="submit_btn"> <label style="padding-bottom: 5px; padding-top: 5px; display: block;"> <input type="checkbox" name="CookiesTime" value="30" checked="checked">30天内免登录 <div class="validation-summary-valid" data-valmsg-summary="true">
-                    <ul>
-                        <li style="display:none"></li>
-                    </ul>
-                </div> </label> <input type="button" class="login_bto login_in" value="登录" /></div><input name="__RequestVerificationToken" type="hidden" value="Nc76lIvSh47SCFmTLE6dwYRgrtmRSIi7IGdhWjwKMaSZOSpEP-sjJtn1_hQ3Gic7zGPkhEck7Ziz3vmZUwGUpDwZbfbmPzAgpNxhu0NzpOs1" />
+        <div class="login_name">
+            <span class="person_bg"></span>
+            <input type="text" class="name login_nm" name="username" placeholder="请输入用户名">
+        </div>
+        <div class="login_name">
+            <span class="psw_bg"></span>
+            <input type="text" class="name login_psw" name="password" placeholder="请输入密码">
+        </div>
+        <div class="submit_btn">
+            <input type="button" class="reg_bto login_in register_in" value="立即登录">
+        </div>
+        <!-- <input name="__RequestVerificationToken" type="hidden" value="Nc76lIvSh47SCFmTLE6dwYRgrtmRSIi7IGdhWjwKMaSZOSpEP-sjJtn1_hQ3Gic7zGPkhEck7Ziz3vmZUwGUpDwZbfbmPzAgpNxhu0NzpOs1" /> -->
     </form>
-    <p class="text_login"> <input type="button" class="login_bto login_in" onclick="javascript:location.href='/user/register'" value="免费注册" /></p>
+    <p class="text_register"> 没有账号？<a href="/register">立即注册</a><br /></p>
     <div class="tip_box">
         <h2>温馨提示：</h2>
         <p>1、登录成功后，可使用永久书架，保存的书永不丢失；<br />2、手机站与PC站共用一个帐号，可实现书架同步。</p>
