--- a/readFrontend/templates/search.ejs
+++ b/readFrontend/templates/search.ejs
@@ -1,33 +1,33 @@
 <%- include('common/top', {}); %>
-<link rel="stylesheet" type="text/css" href="/static/src/css/reset.css" />
-<link rel="stylesheet" type="text/css" href="/static/src/css/index.css" />
+<link rel="stylesheet" type="text/css" href="/static/src/css/common.css" />
 <%- include('common/pageHeader', {}); %>
 <%- include('common/searchForm', {}); %>
-<div class="recommend mybook">
-    <div class="hot_sale "> <span class="num num1">1</span><a href="/book/169/">
-            <p class="title">少女沦落天上人间：浮生未歇</p>
-            <p class="author"> 经典美文 | 作者：衣露申</p>
-            <p class="author">连载 | 更新：第39章 终章</p>
-        </a>
+<div class="historyArea">
+    <div class="historyItem">
+        <span class="num">2</span>
+        <div class="info">
+            <div class="title">
+                <a href="/book/288866/">一剑独尊</a>
+            </div>
+            <div class="otherInfo">
+                <p>科幻灵异 | 作者：科幻大人</p>
+                <p>连载 | 最近更新：<a href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
+            </div>
+        </div>
     </div>
-    <!--MvcPager v3.0.1 for ASP.NET MVC 4.0+ © 2009-2015 Webdiyer (http://www.webdiyer.com)-->
-    <div class="page" data-invalidpageerrmsg="页索引无效" data-outrangeerrmsg="页索引超出范围" data-pagecount="77" data-pageparameter="page" data-pagerid="Webdiyer.MvcPager" data-urlformat="/book/search?keyword=%E4%BA%BA%E9%97%B4&amp;t=1&amp;page=__page__">
-        <a disabled>首页</a>
-        <a disabled>上页</a>
-        1
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=2">2</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=3">3</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=4">4</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=5">5</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=6">6</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=7">7</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=8">8</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=9">9</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=10">10</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=11">...</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=2">下页</a>
-        <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=77">尾页</a>
+    <div class="historyItem">
+        <span class="num">2</span>
+        <div class="info">
+            <div class="title">
+                <a href="/book/288866/">一剑独尊</a>
+            </div>
+            <div class="otherInfo">
+                <p>科幻灵异 | 作者：科幻大人</p>
+                <p>连载 | 最近更新：<a href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
+            </div>
+        </div>
     </div>
 </div>
+<%- include('common/listPager', {}); %>
 <%- include('common/footer', {}); %>
 <%- include('common/bottom', {}); %>
