--- a/book/readFrontend/templates/category.ejs
+++ b/book/readFrontend/templates/category.ejs
@@ -34,7 +34,7 @@
             <p class="review">简介：遇到一个只会嘤嘤嘤的蠢萌戏精系统怎么办？在线等……挺急的！系统不仅绑定错了人，还让自己穿越成了死人！不过……这个死人挺强的！勉强可以接受吧！陈翔很无奈的从秽土转生的棺材里面走出来！“那么，从此刻开始，我是千手柱间！”——关键词：【火影】【木叶】【爽文】【无女主】【无敌流】这是天风的第三本火影同人，品质保证。</p>
         </div>
     </a>
-    <%- include('common/listPager', {}); %>
+    <%- include('common/listPagerPopup', {}); %>
 </div>
 <%- include('common/footer', {}); %>
 <script type="text/javascript" language="javascript">
