--- a/book/readFrontend/templates/common/top.ejs
+++ b/book/readFrontend/templates/common/top.ejs
@@ -3,9 +3,9 @@
 
 <head>
     <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
-    <title>闪舞小说网手机版</title>
-    <meta name="keywords" content="闪舞小说网,35xs" />
-    <meta name="description" content="闪舞小说网致力于打造小说最全，更新最快的在线小说阅读网。" />
+    <title><%= title%></title>
+    <meta name="keywords" content="<%= keywords%>" />
+    <meta name="description" content="<%= description%>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
