--- a/book/readFrontend/templates/category.ejs
+++ b/book/readFrontend/templates/category.ejs
@@ -3,37 +3,36 @@
 <link rel="stylesheet" type="text/css" href="/static/src/css/sort.css" />
 <%- include('common/pageHeader', {}); %>
 <nav class="sortChannel_nav">
-    <a href="/cate/" class="sel">全部</a>
-    <a href="/cate/1/">玄幻奇幻</a>
-    <a href="/cate/2/">武侠仙侠</a>
-    <a href="/cate/6/">科幻灵异</a>
-    <a href="/cate/7/">历史军事</a>
-    <a href="/cate/8/">都市言情</a>
-    <a href="/cate/9/">现代言情</a>
-    <a href="/cate/10/">校园言情</a>
-    <a href="/cate/11/">古代言情</a>
-    <a href="/cate/12/">女生频道</a>
+    <a href="/category/" class="sel">全部</a>
+    <a href="/category/1/">玄幻奇幻</a>
+    <a href="/category/2/">武侠仙侠</a>
+    <a href="/category/6/">科幻灵异</a>
+    <a href="/category/7/">历史军事</a>
+    <a href="/category/8/">都市言情</a>
+    <a href="/category/9/">现代言情</a>
+    <a href="/category/10/">校园言情</a>
+    <a href="/category/11/">古代言情</a>
+    <a href="/category/12/">女生频道</a>
 </nav>
 <div class="recommend">
-    <a class="hot_sale" href="/book/404406/">
+    <% books.forEach(function(book){ %>
+    <a class="hot_sale" href="/book/<%= book.bookId%>/">
         <div class="bookimg">
-            <img class="lazy" data-original="https://www.35xs.co/data/bookimg/404406.jpg" src="//files.35xs.co/m/images/defaultimg.png">
+            <img src="<%= book.cover%>">
         </div>
         <div class="bookinfo">
-            <p class="title">皇叔宠妃悠着点</p>
-            <p class="author">作者：竹九乐</p>
+            <p class="title">
+                <%= book.title%>
+            </p>
+            <p class="author">作者：
+                <%= book.writer%>
+            </p>
+            <p class="review">简介：
+                <%= book.abstractContent%>
+            </p>
         </div>
     </a>
-    <a class="hot_sale" href="/book/404406/">
-        <div class="bookimg">
-            <img class="lazy" data-original="https://www.35xs.co/data/noimg.jpg" src="//files.35xs.co/m/images/defaultimg.png">
-        </div>
-        <div class="bookinfo">
-            <p class="title">西游路上的狐狸</p>
-            <p class="author">作者：过tt万</p>
-            <p class="review">简介：遇到一个只会嘤嘤嘤的蠢萌戏精系统怎么办？在线等……挺急的！系统不仅绑定错了人，还让自己穿越成了死人！不过……这个死人挺强的！勉强可以接受吧！陈翔很无奈的从秽土转生的棺材里面走出来！“那么，从此刻开始，我是千手柱间！”——关键词：【火影】【木叶】【爽文】【无女主】【无敌流】这是天风的第三本火影同人，品质保证。</p>
-        </div>
-    </a>
+    <% }); %>
     <%- include('common/listPagerPopup', {}); %>
 </div>
 <%- include('common/footer', {}); %>
