--- a/book/readFrontend/templates/common/listPagerPopup.ejs
+++ b/book/readFrontend/templates/common/listPagerPopup.ejs
@@ -1,11 +1,19 @@
 <div class="page">
-    <a class="disabled" href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=1">上一页</a>
+    <%  if(pagination.prevPage){ %>
+    <a href="<%= pagination.prevPage %>">上一页</a>
+    <% } else{ %>
+    <a class="disabled" href="javascript:void(0);">上一页</a>
+    <% } %>
     <select class="pageSelecter" onchange="self.location.href=options[selectedIndex].value">
-        <option value="/1/1">第1页</option>
-        <option value="/1/2">第2页</option>
-        <option value="/1/3">第3页</option>
-        <option value="/1/4">第4页</option>
-        <option value="/1/5">第5页</option>
+        <% var i = 1; while(i<=pagination.totalPage){ %>
+        <option <%=pagination.currentPage==i?'selected':'' %> value="
+            <%= pagination.href + '/' + i %>">第
+            <%= i %>页</option>
+        <% i++ } %>
     </select>
-    <a href="/book/search?keyword=%E4%BA%BA%E9%97%B4&t=1&page=77">下一页</a>
+    <%  if(pagination.nextPage){ %>
+    <a href="<%= pagination.nextPage %>">下一页</a>
+    <% } else{ %>
+    <a class="disabled" href="javascript:void(0);">下一页</a>
+    <% } %>
 </div>
