--- a/book/readFrontend/templates/home.ejs
+++ b/book/readFrontend/templates/home.ejs
@@ -11,67 +11,58 @@
 <%- include('common/searchForm', {}); %>
 <div class="tabArea">
     <div class="tab-nav">
-        <a class="tab-nav-cur">强推</a>
+        <a class="tab-nav-cur">
+            <%= firstBlock.name%></a>
     </div>
     <div class="slide">
         <div class="slide-con4">
             <div class="slide-item">
-                <a class="hot_sale" href="/book/404406/">
+                <% firstBlock.books.forEach(function(book){ %>
+                <a class="hot_sale" href="/book/<%= book.bookId%>/">
                     <div class="bookimg">
-                        <img class="lazy" data-original="https://www.35xs.co/data/noimg.jpg" src="//files.35xs.co/m/images/defaultimg.png">
+                        <img src="<%= book.cover%>">
                     </div>
                     <div class="bookinfo">
-                        <p class="title">西游路上的狐狸</p>
-                        <p class="author">作者：过tt万</p>
-                        <p class="review">简介：遇到一个只会嘤嘤嘤的蠢萌戏精系统怎么办？在线等……挺急的！系统不仅绑定错了人，还让自己穿越成了死人！不过……这个死人挺强的！勉强可以接受吧！陈翔很无奈的从秽土转生的棺材里面走出来！“那么，从此刻开始，我是千手柱间！”——关键词：【火影】【木叶】【爽文】【无女主】【无敌流】这是天风的第三本火影同人，品质保证。</p>
+                        <p class="title">
+                            <%= book.title%>
+                        </p>
+                        <p class="author">作者：
+                            <%= book.writer%>
+                        </p>
+                        <p class="review">简介：
+                            <%= book.abstractContent%>
+                        </p>
                     </div>
                 </a>
-                <a class="hot_sale" href="/book/404406/">
-                    <div class="bookimg">
-                        <img class="lazy" data-original="https://www.35xs.co/data/noimg.jpg" src="//files.35xs.co/m/images/defaultimg.png">
-                    </div>
-                    <div class="bookinfo">
-                        <p class="title">西游路上的狐狸</p>
-                        <p class="author">作者：过tt万</p>
-                        <p class="review">简介：遇到一个只会嘤嘤嘤的蠢萌戏精系统怎么办？在线等……挺急的！系统不仅绑定错了人，还让自己穿越成了死人！不过……这个死人挺强的！勉强可以接受吧！陈翔很无奈的从秽土转生的棺材里面走出来！“那么，从此刻开始，我是千手柱间！”——关键词：【火影】【木叶】【爽文】【无女主】【无敌流】这是天风的第三本火影同人，品质保证。</p>
-                    </div>
-                </a>
+                <% }); %>
             </div>
         </div>
     </div>
 </div>
+<% otherBlocks.forEach(function(block){ %>
 <div class="tabArea bannerLink">
     <div class="tab-nav">
-        <h2><a class="tab-nav-cur">玄幻奇幻</a></h2>
+        <h2><a class="tab-nav-cur">
+                <%= block.name%></a></h2>
     </div>
     <div class="slide">
         <div class="slide-con4">
             <div class="slide-item">
-                <a href="/book/185830/">
+                <% block.books.forEach(function(book){ %>
+                <a href="/book/<%= book.bookId%>/">
                     <p>
-                        <span class="sort">[玄幻奇幻]</span>
-                        <span class="title">军婚撩人：少将娇妻太惹火 /<small>悄悄酱</small></span>
+                        <span class="sort">[
+                            <%= book.categoryName%>]</span>
+                        <span class="title">
+                            <%= book.title%> /<small>
+                                <%= book.writer%></small></span>
                     </p>
                 </a>
-                <a href="/book/185830/">
-                    <p>
-                        <span class="sort">[玄幻奇幻]</span>
-                        <span class="title">军婚撩人：少将娇妻太惹火 /<small>悄悄酱</small></span>
-                    </p>
-                </a><a href="/book/185830/">
-                    <p>
-                        <span class="sort">[玄幻奇幻]</span>
-                        <span class="title">军婚撩人：少将娇妻太惹火 /<small>悄悄酱</small></span>
-                    </p>
-                </a><a href="/book/185830/">
-                    <p>
-                        <span class="sort">[玄幻奇幻]</span>
-                        <span class="title">军婚撩人：少将娇妻太惹火 /<small>悄悄酱</small></span>
-                    </p>
-                </a>
+                <% }); %>
             </div>
         </div>
     </div>
 </div>
+<% }); %>
 <%- include('common/footer', {}); %>
 <%- include('common/bottom', {}); %>
