--- a/book/readFrontend/templates/common/pageHeader.ejs
+++ b/book/readFrontend/templates/common/pageHeader.ejs
@@ -1,8 +1,9 @@
 <header class="channelHeader">
     <a href="javascript:history.go(-1);" class="iconback">
         <img alt="返回" src="//files.35xs.co/m/images/header-back.gif">
-    </a> 全部 小说
-    <a href="/home" class="iconhome">
+    </a>
+    <%= pageTitle %>
+    <a href="/" class="iconhome">
         <img alt="首页" src="//files.35xs.co/m/images/header-backhome.gif">
     </a>
 </header>
