--- a/book/readFrontend/templates/common/readPager.ejs
+++ b/book/readFrontend/templates/common/readPager.ejs
@@ -1,5 +1,5 @@
 <p class="Readpager">
-    <a href="116903823.html" id="pt_prev" class="Readpage_up">上一章</a>
-    <a href="/book/440509/" id="pt_mulu" class="Readpage_up">目录</a>
-    <a href="116903825.html" id="pt_next" class="Readpage_down">下一章</a>
+    <a href="./<%= chapter.number-1%>" id="pt_prev" class="Readpage_up">上一章</a>
+    <a href="/book/<%= chapter.bookId%>/mulu" id="pt_mulu" class="Readpage_up">目录</a>
+    <a href="./<%= chapter.number+1%>" id="pt_next" class="Readpage_down">下一章</a>
 </p>
