--- a/book/readFrontend/static/src/css/common.css
+++ b/book/readFrontend/static/src/css/common.css
@@ -308,3 +308,9 @@ footer .channel a {
     outline: none;
     background-color: #fff;
 }
+
+.errorMsg {
+    margin: 0 10px;
+    font-size: 14px;
+    color: red;
+}
