--- a/book/readFrontend/templates/search.ejs
+++ b/book/readFrontend/templates/search.ejs
@@ -3,31 +3,33 @@
 <%- include('common/pageHeader', {}); %>
 <%- include('common/searchForm', {}); %>
 <div class="historyArea">
+    <% books.forEach(function(book, i){ %>
     <div class="historyItem">
-        <span class="num">2</span>
+        <span class="num">
+            <%= i+1 %></span>
         <div class="info">
             <div class="title">
-                <a href="/book/288866/">一剑独尊</a>
+                <a href="/book/<%= book.bookId%>/">
+                    <%= book.title %></a>
             </div>
             <div class="otherInfo">
-                <p>科幻灵异 | 作者：科幻大人</p>
-                <p>连载 | 最近更新：<a href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
+                <p>
+                    <%= book.categoryName %> &nbsp;|&nbsp; 作者:
+                    <%= book.writer %> &nbsp;|&nbsp;
+                    <%= book.publishStatus == 1?'连载':'完成'%>
+                </p>
+                <p>
+                    最近更新：<a href="/book/<%= book.bookId%>/<%= book.chapterCount%>" target="_blank">第一章:谁敢动我妹!</a></p>
             </div>
         </div>
     </div>
-    <div class="historyItem">
-        <span class="num">2</span>
-        <div class="info">
-            <div class="title">
-                <a href="/book/288866/">一剑独尊</a>
-            </div>
-            <div class="otherInfo">
-                <p>科幻灵异 | 作者：科幻大人</p>
-                <p>连载 | 最近更新：<a href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
-            </div>
-        </div>
-    </div>
+    <% }); %>
 </div>
-<%- include('common/listPager', {}); %>
+<% if(errorMsg){ %>
+<h2 class="errorMsg">
+    <%= errorMsg %>
+</h2>
+<% } %>
+<%- include('common/listPagerPopup', {}); %>
 <%- include('common/footer', {}); %>
 <%- include('common/bottom', {}); %>
