--- a/book/readFrontend/static/src/css/common.css
+++ b/book/readFrontend/static/src/css/common.css
@@ -1,79 +1,36 @@
 * {
     margin: 0;
     padding: 0;
-    /* background-attachment:fixed;*/
 }
-
-div,
-p {
-    wrap-work: break-word;
-    word-break: break-all;
-    word-wrap: break-word;
-    word-break: normal;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -ms-box-sizing: border-box;
-}
-
-li {
-    list-style: none;
-}
-
-em {
-    font-style: normal;
-}
-
 body {
     color: #4c6978;
     font: 14px 'microsoft yahei', Arial, Helvetica, sans-serif;
 }
-
-input,
-textarea {
-    font: 12px '宋体', Arial, Helvetica, sans-serif;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -box-sizing: border-box;
-}
-
 img {
     border: none;
 }
-
 a {
     color: #4c6978;
     text-decoration: none;
     border: none;
     cursor: pointer;
 }
-
 a:hover {
     text-decoration: none;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-size: 16px;
+    font-weight: normal;
 }
 
 .clearfix {
     display: block;
 }
-
 .clearfix:after {
     clear: both;
-    content: ".";
+    content: "";
     display: block;
-    height: 0;
-    visibility: hidden;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-size: 16px;
-    font-weight: normal;
-}
-
 
 /*底部*/
 footer {
@@ -84,7 +41,6 @@ footer {
     position: relative;
     font-size: 14px;
 }
-
 footer .backTop img {
     position: absolute;
     right: 25px;
@@ -92,11 +48,111 @@ footer .backTop img {
     cursor: pointer;
     width: 31px;
 }
-
 footer .channel a {
     margin: 0 5px;
     color: #c5d7df;
     text-shadow: 1px 1px #3e86a8;
+}
+
+header {
+    height: 54px;
+    background: #4baacd;
+    line-height: 54px;
+    border-bottom: 1px #4399b8 solid;
+}
+header span.logo {
+    float: left;
+    width: 142px;
+    height: 54px;
+    font-size: 24px;
+    color: #fff;
+    padding-left: 12px;
+}
+/*header a.login {
+    width: 25px;
+    height: 54px;
+    float: right;
+    margin: 0 6px;
+    font-size: 12px;
+    color: #C5F1FF;
+    line-height: 80px;
+    background: url(../images/icon-login.gif);
+    background-repeat: no-repeat;
+    background-position: 50% 30%;
+    background-size: 18px 19px;
+}*/
+
+.smallNav {
+    height: 40px;
+    background: #4baacd;
+    line-height: 40px;
+    text-align: center;
+    border-bottom: 1px #4399b8 solid;
+    font-size: 14px;
+    padding: 0 10px;
+    border-top: 1px #5db3d2 solid;
+}
+.smallNav a {
+    color: #fff;
+    float: left;
+    width: 16%;
+}
+.smallNav .sel {
+    font-weight: bold;
+}
+
+.tab-nav {
+    font-size: 16px;
+    background: #68aac2;
+    padding: 0 0 0 15px;
+    color: #fff;
+    height: 40px;
+    line-height: 40px;
+    overflow: hidden;
+}
+.tab-nav a {
+    color: #fff;
+    cursor: pointer;
+}
+.tab-nav .tab-nav-more {
+    float: right;
+    margin-right: 10px;
+    /*color: red;*/
+}
+
+/*子页面头部*/
+.channelHeader {
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    font-size: 16px;
+    color: #fff;
+    background-color: #68aac2;
+    border-top: 1px #8ec5d9 solid;
+    overflow: hidden;
+    padding: 0;
+}
+.channelHeader .iconback {
+    float: left;
+}
+.channelHeader .iconhome {
+    float: right;
+}
+.channelHeader .iconback, .channelHeader .iconhome {
+    margin-top: 3px;
+    font-size: 12px;
+    text-align: center;
+    color: #fff;
+    line-height: 40px;
+    width: 40px;
+    height: 40px;
+}
+.channelHeader .iconback img, .channelHeader .iconhome img {
+    width: 40px;
+    height: 40px;
+    font-size: 12px;
+    text-align: center;
+    line-height: 40px;
 }
 
 /*搜索框*/
@@ -106,7 +162,6 @@ footer .channel a {
     position: relative;
     clear: both;
 }
-
 .searchForm_input {
     border: 1px #c0deea solid;
     font-size: 14px;
@@ -116,8 +171,8 @@ footer .channel a {
     height: 30px;
     line-height: 30px;
     color: #cbcfd1;
+    box-sizing: border-box;
 }
-
 .searchForm_btn {
     position: absolute;
     right: 0;
@@ -134,87 +189,41 @@ footer .channel a {
     border-left: 1px #C0DEEA solid;
 }
 
-/*子页面头部*/
-.channelHeader {
-    height: 45px;
-    line-height: 45px;
-    text-align: center;
-    font-size: 16px;
-    color: #fff;
-    /*text-shadow: 1px 1px #2680aa;*/
-    /*background-size: 136px 45px;*/
-    background-color: #68aac2;
-    border-top: 1px #8ec5d9 solid;
-    overflow: hidden;
-    padding: 0;
-}
-
-.iconback {
-    float: left;
-}
-
-.iconhome {
-    float: right;
-}
-
-.iconback,
-.iconhome {
-    margin-top: 3px;
-    font-size: 12px;
-    text-align: center;
-    color: #fff;
-    line-height: 40px;
-    width: 40px;
-    height: 40px;
-}
-
-.iconback img,
-.iconhome img {
-    width: 40px;
-    height: 40px;
-    font-size: 12px;
-    text-align: center;
-    line-height: 40px;
-}
-
+/*列表项*/
 .hot_sale {
     display: block;
     position: relative;
     padding: 10px 5px 10px 0;
     overflow: hidden;
-    border-bottom: 1px #d6d6d6 solid;
+    background: #edfaff;
+    border: none;
 }
-
 .hot_sale .bookimg {
     float: left;
-    width: 70px;
-    height: 80px;
+    width: 110px;
+    height: 120px;
+    text-align: center;
 }
-
 .hot_sale .bookimg img {
     border: 1px #b4dae8 solid;
-    width: 60px;
-    height: 80px;
+    width: 90px;
+    height: 120px;
 }
-
 .hot_sale .bookinfo {
     overflow: hidden;
 }
-
 .hot_sale .title {
     color: #375868;
     font-size: 16px;
     height: 20px;
     overflow: hidden;
 }
-
 .hot_sale .author {
     font-size: 14px;
     color: #7f9ba8;
     height: 24px;
     line-height: 24px;
 }
-
 .hot_sale .review {
     font-size: 14px;
     color: #7f9ba8;
@@ -222,62 +231,63 @@ footer .channel a {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+}
+.common_sale {
+    display: block;
+    font-size: 16px;
+    padding: 8px 10px;
+}
+.common_sale .sort, .common_sale .writer {
+    color: #777;
 }
 
-.hot_sale:last-child {
-    border-bottom-color: #fff;
-}
-
-.historyArea .historyItem {
+/*分类项*/
+.sortChannel_nav {
     overflow: hidden;
-    background: #edfaff;
+    margin: 10px 0;
+}
+.sortChannel_nav a {
+    display: block;
+    float: left;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px #d6d6d6 solid;
+    background: #fff;
+    width: 25%;
+    box-sizing: border-box;
+}
+.sortChannel_nav a.sel {
+    background: #4baacd;
+    color: #fff;
 }
 
+/*阅读记录*/
+.historyArea .historyItem {
+    background: #edfaff;
+    padding: 10px;
+}
 .historyArea .historyItem:nth-child(2n) {
     background: #fff;
 }
-
-.historyArea .historyItem .num {
-    height: 24px;
-    width: 32px;
-    border-radius: 3px;
-    display: inline-block;
-    float: left;
-    background: #68aac2;
-    color: #fff;
-    text-align: center;
-    line-height: 24px;
-    margin: 10px;
-}
-
-.historyArea .historyItem .info {
-    float: left;
-    margin: 10px 0;
-    font-size: 12px;
-}
-
 .historyArea .historyItem .title {
     font-size: 16px;
 }
-
 .historyArea .historyItem .otherInfo {
     font-size: 12px;
     color: #7f9ba8;
 }
-
 .historyArea .historyItem .otherInfo p {
     margin: 4px 0;
 }
-
 .historyArea .historyItem .otherInfo p:last-child {
     margin: 0;
 }
-
-.historyArea .historyItem .lastReaded {
+/*.historyArea .historyItem .lastReaded {
     color: red;
-}
+}*/
 
 .page {
     background: #68aac2;
@@ -287,21 +297,17 @@ footer .channel a {
     line-height: 40px;
     text-align: center;
 }
-
 .page a {
     color: #fff;
     margin: 0 4px;
 }
-
 .page a.disabled {
     color: #ddd;
 }
-
 .page a.disabled {
     color: #c5d7df;
 }
-
-.pageSelecter {
+.page .pageSelecter {
     width: 100px;
     height: 24px;
     border-radius: 2px;
@@ -313,4 +319,38 @@ footer .channel a {
     margin: 0 10px;
     font-size: 14px;
     color: red;
+}
+
+/*book详情和目录*/
+.synopsisArea {
+    margin: 10px 0;
+    text-align: center;
+}
+.synopsisArea a {
+    display: inline-block;
+    padding: 5px 18px 5px 18px;
+    background: #eb2650;
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+    border-radius: 5px;
+    margin: 0 3px;
+}
+.synopsisArea .btn_toBookShelf {
+    background: #f0962a;
+    box-shadow: 0 2px 1px #d88726 inset;
+}
+.synopsisArea .btn_toMyBook {
+    background: #658fbd;
+    box-shadow: 0 2px 1px #5b80aa inset;
+}
+.book_detail_review {
+    padding: 5px 10px;
+    line-height: 23px;
+}
+.chapter {
+    display: block;
+    padding: 0 10px;
+    line-height: 40px;
+    font-size: 16px;
 }
