--- a/book/readFrontend/templates/category.ejs
+++ b/book/readFrontend/templates/category.ejs
@@ -1,33 +1,19 @@
 <%- include('common/top', {}); %>
 <link rel="stylesheet" type="text/css" href="/static/src/css/common.css" />
-<link rel="stylesheet" type="text/css" href="/static/src/css/sort.css" />
 <%- include('common/pageHeader', {}); %>
+<%- include('common/searchForm', {}); %>
 <%- include('common/categoryNav', {}); %>
 <div class="recommend">
     <% books.forEach(function(book){ %>
-    <a class="hot_sale" href="/book/<%= book.bookId%>/">
-        <div class="bookimg">
-            <img src="<%= book.cover%>">
-        </div>
-        <div class="bookinfo">
-            <p class="title">
-                <%= book.title%>
-            </p>
-            <p class="author">作者：
-                <%= book.writer%>
-            </p>
-            <p class="review">简介：
-                <%= book.abstractContent%>
-            </p>
-        </div>
+    <a class="common_sale" href="/book/<%= book.bookId%>/">
+        <span class="sort">
+            <%= '['+book.categoryName+']'%></span>
+        <span class="title">
+            <%= book.title%></span> /<span class="writer">
+            <%= book.writer%></span>
     </a>
     <% }); %>
     <%- include('common/listPagerPopup', {}); %>
 </div>
 <%- include('common/footer', {}); %>
-<script type="text/javascript" language="javascript">
-$(function() {
-    $("#cate0").addClass("on");
-});
-</script>
 <%- include('common/bottom', {}); %>
