--- a/book/readFrontend/templates/history.ejs
+++ b/book/readFrontend/templates/history.ejs
@@ -1,31 +1,21 @@
 <%- include('common/top', {}); %>
 <link rel="stylesheet" type="text/css" href="/static/src/css/common.css" />
 <%- include('common/pageHeader', {}); %>
+<%- include('common/searchForm', {}); %>
 <div class="historyArea">
-    <div class="historyItem">
-        <span class="num">1</span>
-        <div class="info">
-            <div class="title">
-                <a href="/book/288866/">一剑独尊</a>
-            </div>
-            <div class="otherInfo">
-                <p>作者：xxx | 分类：科幻灵异</p>
-                <p>上次阅读：<a class="lastReaded" href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
-                <p>最近更新：<a href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
-            </div>
-        </div>
+    <div class="tab-nav">
+        <h2>
+            <a class="tab-nav-cur">阅读记录</a>
+            <a class="tab-nav-more">清空</a>
+        </h2>
     </div>
     <div class="historyItem">
-        <span class="num">2</span>
-        <div class="info">
-            <div class="title">
-                <a href="/book/288866/">一剑独尊</a>
-            </div>
-            <div class="otherInfo">
-                <p>作者：xxx | 分类：科幻灵异</p>
-                <p>上次阅读：<a class="lastReaded" href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
-                <p>最近更新：<a href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
-            </div>
+        <div class="title">
+            <a href="/book/288866/">一剑独尊</a>
+        </div>
+        <div class="otherInfo">
+            <p>作者：xxx | 分类：科幻灵异</p>
+            <p>上次阅读：<a class="lastReaded" href="/book/288866/64602154.html" target="_blank">第一章:谁敢动我妹!</a></p>
         </div>
     </div>
 </div>
