--- a/book/readFrontend/templates/mulu.ejs
+++ b/book/readFrontend/templates/mulu.ejs
@@ -1,11 +1,10 @@
 <%- include('common/top', {}); %>
 <link rel="stylesheet" href="/static/src/css/common.css" />
-<link rel="stylesheet" href="/static/src/css/bookinfo.css" />
 <%- include('common/pageHeader', {}); %>
 <div class="recommend">
     <div id="chapterlist" class="directoryArea">
         <% chapters.forEach(function(chapter){ %>
-        <p><a href="/book/<%= chapter.bookId%>/<%= chapter.number%>">
+        <p><a class="chapter" href="/book/<%= chapter.bookId%>/<%= chapter.number%>">
                 <%= chapter.title%></a></p>
         <% }); %>
     </div>
