--- a/book/readFrontend/templates/common/footer.ejs
+++ b/book/readFrontend/templates/common/footer.ejs
@@ -1,8 +1,7 @@
 <div class="clearfix"></div>
-<%- include('./searchForm', {}); %>
 <footer>
     <a href="#top" class="backTop">
-        <img src="//files.35xs.co/m/images/icon-backtop.gif" title="↑" alt="↑" />
+        <img src="/static/src/images/icon-backtop.gif" title="↑" alt="↑" />
     </a>
     <p class="version channel">
         <a href="/">首页</a>
@@ -13,5 +12,5 @@
     <p>本站所收录作品均是来源于网友上传,与本站立场无关,如有侵犯版权或涉黄问题,请来信告知,本站立即予以删除。 邮箱:35xsmail@gmail.com</p>
 </footer>
 <script language="javascript" type="text/javascript" src="//cdn.jsdelivr.net/npm/zepto@1.2.0/dist/zepto.min.js"></script>
-<script language="javascript" type="text/javascript" src="/static/src/js/common.min.js"></script>
 <script language="javascript" type="text/javascript" src="/static/src/js/core.js"></script>
+<script language="javascript" type="text/javascript" src="/static/src/js/common.js"></script>
