--- a/book/readFrontend/templates/common/pageHeader.ejs
+++ b/book/readFrontend/templates/common/pageHeader.ejs
@@ -1,9 +1,9 @@
 <header class="channelHeader">
     <a href="javascript:history.go(-1);" class="iconback">
-        <img alt="返回" src="//files.35xs.co/m/images/header-back.gif">
+        <img alt="返回" src="/static/src/images/header-back.png">
     </a>
     <%= pageTitle %>
     <a href="/" class="iconhome">
-        <img alt="首页" src="//files.35xs.co/m/images/header-backhome.gif">
+        <img alt="首页" src="/static/src/images/header-backhome.png">
     </a>
 </header>
